--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,11 @@ disqus_shortname:   taylantatli
 #email:
 twitter:            username
 facebook:           username
-github-url:         username
+github-url:         rssungjae1
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          username
+instagram:          songsj_nd99
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
