--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ instagram:          songsj_nd99
 #codepen:           username
 #keybase:           username
 #xmpp:              username@server.com
-#hackernews:        username
+velog:        "@rssungjae"
 
 # Gems
 gems:
